# comms

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.claude/commands/: followups.md  inbox.md  prep.md  week.md
.codex/skills/comms-daily-meeting-prep/: SKILL.md
.codex/skills/comms-inbox-triage/: SKILL.md
.codex/skills/comms-meeting-followups/: SKILL.md
.codex/skills/comms-weekly-calendar-review/: SKILL.md
comms/: config.py
comms/clients/: ashby.py  calendar.py  drive.py  gmail.py  grain.py  notion.py  sheets.py  slack.py
comms/mcp/: __main__.py  server.py  tools.py
